# set-covering-problem

./: .gitignore  Cargo.toml  LICENSE  README.md
Docs/: main.tex  references.bib
Docs/docUI/: Extras.tex  MiniPortada.tex  paquetes.tex
Docs/sections/: section1.tex
src/: lib.rs  main.rs
src/entity/: mod.rs  set.rs  subset_cover.rs
src/rfd/: mod.rs  river_formation_dynamics.rs
src/utils/: config.rs  mod.rs  read_input.rs  svg_plot.rs  write_report.rs
tests/: tests_read_input.rs  tests_set.rs  tests_subset_cover.rs
