[package]
name = "set-covering-problem"
version = "0.1.0"
authors = ["Joaquín Medina Peralta joaquin.medina513@ciencias.unam.mx"]
description = "Módulo para la resolución del problema de cobertura de conjuntos por medio una heurística"
license = "MIT"
edition = "2024"

[dependencies]
dotenvy = "0.15"
tempfile = "3.21.0"
rand = { version = "0.8", features = ["std","small_rng"] }
chrono = "0.4.42"
svg = "0.18.0"
